force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>Storing records of Students.</description>
    <label>Student</label>
    <nameField>
        <displayFormat>St-{0000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>