force-app/main/default/objects/Student__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <formula>IF( Total_Number_of_Rating__c &lt; 1, 0, Sum_of_All_Ratings__c  /  Total_Number_of_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>