force-app/main/default/objects/Student__c/fields/Course_Opted__c.field-meta.xml
<CustomField>
    <fullName>Course_Opted__c</fullName>
    <label>Course Opted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stream_Opted__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adv Java</fullName>
            </value>
            <value>
                <fullName>Amazon AWS</fullName>
            </value>
            <value>
                <fullName>Android App Development</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Core Java</fullName>
            </value>
            <value>
                <fullName>IOS</fullName>
            </value>
            <value>
                <fullName>MERN Stack</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>