force-app/main/default/objects/Student__c/fields/Currently_Working_At__c.field-meta.xml
<CustomField>
    <fullName>Currently_Working_At__c</fullName>
    <label>Currently Working At</label>
    <length>50</length>
    <type>Text</type>
</CustomField>