force-app/main/default/objects/Student__c/fields/Fee_Deposited__c.field-meta.xml
<CustomField>
    <fullName>Fee_Deposited__c</fullName>
    <label>Fee Deposited</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>