force-app/main/default/objects/Student__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crafting</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Playing Cricket</fullName>
            </value>
            <value>
                <fullName>Playing Guitar</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Singing</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>