force-app/main/default/objects/Student__c/fields/Is_Graduated__c.field-meta.xml
<CustomField>
    <fullName>Is_Graduated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Graduated?</label>
    <type>Checkbox</type>
</CustomField>