force-app/main/default/objects/Student__c/fields/Stream_Opted__c.field-meta.xml
<CustomField>
    <fullName>Stream_Opted__c</fullName>
    <label>Stream Opted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Core Programming</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>MERN</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>