force-app/main/default/objects/Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <description>This field to store name of student</description>
    <inlineHelpText>Please Enter Your Name.</inlineHelpText>
    <label>Student Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>