force-app/main/default/objects/Student__c/fields/Students_Contact__c.field-meta.xml
<CustomField>
    <fullName>Students_Contact__c</fullName>
    <label>Students Contact</label>
    <type>Phone</type>
</CustomField>