force-app/main/default/objects/Student__c/fields/Total_Number_of_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Rating__c</fullName>
    <label>Total Number of Rating</label>
    <summaryForeignKey>Rating__c.Rating_given_to_student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>