force-app/main/default/objects/Student__c/validationRules/RegFees_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>RegFees_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(Course_Opted__c, &apos;Salesforce Admin&apos;) || 
    ISPICKVAL(Course_Opted__c, &apos;Salesforce Developer&apos;) ||  
    ISPICKVAL(Course_Opted__c, &apos;Big Data&apos;),false,  
IF( Registration_Fees__c &lt; 5000, true, false))</errorConditionFormula>
    <errorMessage>Registration Fees cannot be less then 5000</errorMessage>
</ValidationRule>