force-app/main/default/objects/Student__c/listViews/Student_Lead_Member_Student.listView-meta.xml
<ListView>
    <fullName>Student_Lead_Member_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>Student &amp; Lead Member</label>
    <queue>Student_Lead_Member</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>